# authrs

./: .gitignore  README.md
authrs/: Cargo.toml
authrs/migrations/2018-11-14-203546_inital/: down.sql  up.sql
authrs/src/: auth_service.rs  lib.rs  main.rs  schema.rs
migrations/2018-10-26-173842_create_tickets/: down.sql  up.sql
src/: db_connection.rs  lib.rs  main.rs  models.rs  schema.rs  tests.rs  ticket.rs
