[package]
name = "authrs"
version = "0.1.0"
authors = ["R1tschY <r1tschy@yahoo.de>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"
diesel = { version = "<= 1.2", features = ["sqlite", "r2d2"] }
r2d2 = "*"
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "*"
time = "0.1"
cookie = "0.9"
